Alterando forma de importacao da logo

--- a/sobrenos.html
+++ b/sobrenos.html
@@ -25,11 +25,7 @@
 
         <div class="collapse navbar-collapse d-lg-flex" id="navbarsExample11">
           <a class="navbar-brand col-lg-3 me-0 ps-3" href="./index.html">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-              <path
-                d="M19 2V4H17V7C18.6569 7 20 8.34315 20 10V21C20 21.5523 19.5523 22 19 22H5C4.44772 22 4 21.5523 4 21V10C4 8.34315 5.34315 7 7 7V4H5V2H19ZM17 9H7C6.44772 9 6 9.44772 6 10V20H18V10C18 9.44772 17.5523 9 17 9ZM13 11V13H15V15H12.999L13 17H11L10.999 15H9V13H11V11H13ZM15 4H9V7H15V4Z"
-                fill="rgba(210, 210, 210,1)"></path>
-            </svg>
+            <img class="logo" src="./images/logo.svg" alt="Imagem de logotipo">
             <span id="titulo-logo">Farmácia Milagrosa</span>
           </a>
           <ul class="navbar-nav col-lg-6 justify-content-lg-center">
@@ -86,13 +82,8 @@
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-5 border-top">
         <p class="col-md-4 mb-0 text-body-secondary">© 2023 Company, Inc</p>
 
-        <a href="./index.html"
-          class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-            <path
-              d="M19 2V4H17V7C18.6569 7 20 8.34315 20 10V21C20 21.5523 19.5523 22 19 22H5C4.44772 22 4 21.5523 4 21V10C4 8.34315 5.34315 7 7 7V4H5V2H19ZM17 9H7C6.44772 9 6 9.44772 6 10V20H18V10C18 9.44772 17.5523 9 17 9ZM13 11V13H15V15H12.999L13 17H11L10.999 15H9V13H11V11H13ZM15 4H9V7H15V4Z"
-              fill="rgba(213, 214, 215,1)"></path>
-          </svg>
+        <a href="./index.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+          <img class="logo" src="./images/logo.svg" alt="Imagem de logotipo">
         </a>
 
         <ul class="nav col-md-4 justify-content-end">
