--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
-  <script></script>
+  <script type="module" src="./js/main.js" defer></script>
 </head>
 
 <body>
@@ -25,19 +25,19 @@
         </button>
 
         <div class="collapse navbar-collapse d-lg-flex" id="navbarsExample11">
-          <a class="navbar-brand col-lg-3 me-0 ps-3" href="#">
-            <img class="logo" src="./images/logo.svg" alt="Imagem de logotipo">
-            <span id="titulo-logo">Farmácia Milagrosa</span>
+          <a class="navbar-brand col-lg-3 me-0 ps-3" href="./index.html">
+            <img class="logo">
+            <span id="titulo-logo"></span>
           </a>
           <ul class="navbar-nav col-lg-6 justify-content-lg-center">
             <li class="nav-item pe-3">
-              <a class="nav-link" href="#">Todos os remédios</a>
+              <a class="nav-link" href="./index.html"></a>
             </li>
             <li class="nav-item pe-3">
-              <a class="nav-link" href="./sobrenos.html">Sobre nós</a>
+              <a class="nav-link" href="./sobrenos.html"></a>
             </li>
             <li class="nav-item pe-3">
-              <a class="nav-link" href="./contato.html">Fale conosco</a>
+              <a class="nav-link" href="./contato.html"></a>
             </li>
           </ul>
           <div class="d-lg-flex col-lg-3 justify-content-lg-end pe-3">
