--- a/index.html
+++ b/index.html
@@ -55,69 +55,7 @@
           <h2>Todos os remédios</h2>
         </div>
 
-        <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
-          <div class="col">
-            <div class="card mb-4 rounded-3 shadow-sm">
-              <div class="card-header py-3 text-end">
-                <h4 class="my-0 fw-normal pe-3 heart"><i class="bi bi-heart-fill"></i></h4>
-              </div>
-              <div class="card-body">
-                <div>
-                  <img src="./images/remedio.png" class="img-fluid rounded" alt="Foto de remedio" width="200"
-                    height="200">
-                </div>
-                <h1 class="card-title pricing-card-title mt-3">R$27,99<small
-                    class="text-body-secondary fw-light">/un</small></h1>
-                <ul class="list-unstyled mt-3 mb-4">
-                  <li>SHAMPOO JOHNSONS BABY CABELOS CLAROS 400ML</li>
-                  <li>
-                </ul>
-                <button type="button" class="w-100 btn btn-lg btn-outline-primary fs-4">Adicionar</button>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card mb-4 rounded-3 shadow-sm">
-              <div class="card-header py-3 text-end">
-                <h4 class="my-0 fw-normal pe-3 heart"><i class="bi bi-heart-fill"></i></h4>
-              </div>
-              <div class="card-body">
-                <div>
-                  <img src="./images/remedio.png" class="img-fluid rounded" alt="Foto de remedio" width="200"
-                    height="200">
-                </div>
-                <h1 class="card-title pricing-card-title mt-3">R$27,99<small
-                    class="text-body-secondary fw-light">/un</small></h1>
-                <ul class="list-unstyled mt-3 mb-4">
-                  <li>SHAMPOO JOHNSONS BABY CABELOS CLAROS 400ML</li>
-                  <li>
-                </ul>
-                <button type="button" class="w-100 btn btn-lg btn-outline-primary fs-4">Adicionar</button>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card mb-4 rounded-3 shadow-sm">
-              <div class="card-header py-3 text-end">
-                <h4 class="my-0 fw-normal pe-3 heart"><i class="bi bi-heart-fill"></i></h4>
-              </div>
-              <div class="card-body">
-                <div>
-                  <img src="./images/remedio.png" class="img-fluid rounded" alt="Foto de remedio" width="200"
-                    height="200">
-                </div>
-                <h1 class="card-title pricing-card-title mt-3">R$27,99<small
-                    class="text-body-secondary fw-light">/un</small></h1>
-                <ul class="list-unstyled mt-3 mb-4">
-                  <li>SHAMPOO JOHNSONS BABY CABELOS CLAROS 400ML</li>
-                  <li>
-                </ul>
-                <button type="button" class="w-100 btn btn-lg btn-outline-primary fs-4">Adicionar</button>
-              </div>
-            </div>
-          </div>
+        <div id="card-body" class="row row-cols-1 row-cols-md-3 mb-3 text-center">
         </div>
 
       </div>
